# AsciiDoc-MCP

./: .gitignore  CLAUDE.md  README.md  docToolchainConfig.groovy  pyproject.toml  report.html
.github/workflows/: claude-code-review.yml  claude.yml  gh-pages.yml  test.yml
docs/: user-manual.md
scripts/: generate_test_badge.py  update_coverage_badge.py
src/dacli/: __init__.py  __main__.py  asciidoc_parser.py  cli.py  file_handler.py  main.py  markdown_parser.py  mcp_app.py  models.py  parser_utils.py  structure_index.py
src/dacli/api/: __init__.py  app.py  content.py  manipulation.py  models.py  navigation.py
src/dacli/services/: __init__.py  content_service.py  metadata_service.py  validation_service.py
src/docs/: landingpage.gsp
src/docs/50-user-manual/: 10-installation.adoc  20-mcp-tools.adoc  50-tutorial.adoc  index.adoc
src/docs/arc42/: arc42.adoc
src/docs/spec/: 01_use_cases.adoc  02_api_specification.adoc  03_acceptance_criteria.adoc  04_markdown_parser.adoc  05_asciidoc_parser.adoc  06_cli_specification.adoc
src/mcp_server/: asciidoc_parser.py  cli.py  file_utils.py  main.py  markdown_parser.py  mcp_app.py  models.py  structure_index.py
tests/: test_asciidoc_parser.py  test_cli.py  test_content_access_api.py  test_edit_operations_bugs.py  test_element_content.py  test_file_system_handler.py  test_file_utils.py  test_included_files_integration.py  test_insert_hierarchy_fix_208.py  test_manipulation_api.py  test_markdown_parser.py  test_mcp_tools.py  test_models.py  test_navigation_api.py  test_parser_utils.py  test_path_syntax_fix_198.py  test_preserve_title_fix_195.py  test_project_setup.py  test_scan_includes.py  test_structure_index.py
tests/api/: test_structure_api.py
tests/components/: test_index.py
(+36 files in other folders)
