[project]
name = "dacli"
version = "0.2.1"
description = "Documentation Access CLI - Navigate and query large documentation projects"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Ralf D. Müller" }
]
keywords = ["documentation", "cli", "asciidoc", "markdown", "mcp", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.3.1",
    "fastapi>=0.115.0",
    "fastmcp>=2.14.0,<3",
    "pathspec>=1.0.3",
    "pydocket<0.17",  # Pin to avoid breaking change in 0.17 (fastmcp compatibility)
    "pyyaml>=6.0",
    "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/docToolchain/dacli"
Repository = "https://github.com/docToolchain/dacli"
Issues = "https://github.com/docToolchain/dacli/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-html>=4.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
dacli = "dacli.cli:cli"
dacli-mcp = "dacli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dacli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
